feat: Upcoming invoice (#948)
